--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "shadow",
-    "displayName": "ShaDow",
+    "name": "the_jungle_green",
+    "displayName": "The Jungle Green",
     "description": "It is a dark theme, gives the feeling of a hacking environment",
     "version": "0.0.1",
     "publisher": "TheJungleGreen",
