--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "the_jungle_green",
+    "name": "shadow",
     "displayName": "The Jungle Green",
-    "description": "It is a dark theme, gives the feeling of a hacking environment",
+    "description": "It is a dark-greenish theme, gives the feeling of a Jungle environment",
     "version": "0.0.1",
     "publisher": "TheJungleGreen",
     "repository":{
